--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "item-manager",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
